[project]
name = "workshop-docker"
version = "0.1.0"
description = ""
authors = [
    {name = "Leonardo Costa Santos",email = "leonardo.costa.santos.si@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
