[tool.poetry]
name = "workshop-docker"
version = "0.1.0"
description = ""
authors = ["Leonardo Costa Santos <leonardo.costa.santos.si@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.12"
streamlit = ">=1.45.1,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
